--- a/thundermans/styles.css
+++ b/thundermans/styles.css
@@ -1,8 +1,7 @@
 body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: Arial, sans-serif;
         }
         .hero {
-            background-image: url('https://source.unsplash.com/1600x900/?comics,superheroes');
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://source.unsplash.com/1536x1024/?comics,store') no-repeat center center;
             background-size: cover;
-            background-position: center;
         }
