--- a/thundermans/styles.css
+++ b/thundermans/styles.css
@@ -1,7 +1,8 @@
 body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
-        .hero {
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://source.unsplash.com/1536x1024/?comics,store') no-repeat center center;
+        .hero-bg {
+            background-image: url('https://unsplash.com/es/fotos/foto-timelapse-de-un-relampago--qWs2GFsyeg');
             background-size: cover;
+            background-position: center;
         }
